--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="nyc.c4q.ashiquechowdhury.schoolme.MainActivity">
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/bottom_navigation"
         android:layout_alignParentBottom="true"
         design:itemBackground="@color/colorPrimary"
         android:layout_width="match_parent"
