--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:design="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
@@ -15,4 +15,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         design:menu="@menu/my_navigation_items" />
-</RelativeLayout>
+</LinearLayout>
