--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -2,11 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/profile_menu_item"
         android:title="Profile"
-        android:icon="@drawable/ic_home_black_24dp" />
+        android:icon="@drawable/ic_person_black_24dp" />
     <item android:id="@+id/home_menu_item"
         android:title="Home"
         android:icon="@drawable/ic_home_black_24dp" />
     <item android:id="@+id/favorites_menu_item"
-        android:title="Favorties"
+        android:enabled="true"
+        android:title="Favorites"
         android:icon="@drawable/ic_favorite_black_24dp" />
 </menu>
