--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -9,14 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <ImageView
             android:id="@+id/school_pic"
             android:layout_width="wrap_content"
             android:layout_height="275dp"
             android:layout_alignParentTop="true"
             android:gravity="center"
-            android:src="@drawable/school" />
+            android:src="@drawable/ic_home_black_24dp" />
 
         <TextView
             android:id="@+id/school_name"
