--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigation"
         android:id="@+id/frame_layout"
-        android:paddingBottom="?actionBarSize">
+        android:paddingBottom="50dp">
 
     </FrameLayout>
 
@@ -22,7 +22,7 @@
         android:layout_gravity="bottom"
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         design:menu="@menu/my_navigation_items"
         android:background="#009688"
         design:itemIconTint="#fff"
