--- a/app/src/main/res/layout/schoolinfo_scrollview.xml
+++ b/app/src/main/res/layout/schoolinfo_scrollview.xml
@@ -11,7 +11,7 @@
         <LinearLayout
             android:id="@+id/school_name_info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="@dimen/school_info_container_padding">
 
