--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="#000000">
+    >
 
     <RelativeLayout
+        android:background="@color/cardview_light_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/school_pic"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="275dp"
             android:layout_alignParentTop="true"
-            android:gravity="center"
             android:src="@drawable/ic_home_black_24dp" />
 
         <TextView
