--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -2,13 +2,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <RelativeLayout
-        android:background="@color/cardview_light_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#000000">
 
         <ImageView
             android:id="@+id/school_pic"
@@ -39,15 +38,15 @@
 
 
         <LinearLayout
-            android:paddingTop="10dp"
             android:id="@+id/school_enrolled_students"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_location"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="10dp">
 
             <TextView
+                android:id="@+id/student_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="550"
@@ -63,13 +62,22 @@
 
 
         <TextView
-            android:id="@+id/school_description"
+            android:id="@+id/advanced_placement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_enrolled_students"
             android:paddingTop="10dp"
-            android:text="School description. School description.School description.School description.School description.School description.School description.School description. "
-            android:textSize="15sp" />
+            android:text="Advanced placement courses go here."
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/extracurricular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/advanced_placement"
+            android:paddingTop="10dp"
+            android:text="Extracurricular activities go there."
+            android:textSize="20sp" />
 
 
     </RelativeLayout>
