--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -24,38 +24,45 @@
             android:layout_alignParentStart="true"
             android:background="@drawable/gradient"
             android:gravity="bottom"
-            android:text="Springfield High School"
+            android:paddingLeft="5dp"
+            android:textColor="#ffffff"
             android:textSize="30sp" />
 
 
         <TextView
             android:id="@+id/school_location"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_name"
-            android:text="New York, NY"
+            android:paddingLeft="5dp"
+            android:textColor="#ffffff"
             android:textSize="20sp" />
 
 
         <LinearLayout
             android:id="@+id/school_enrolled_students"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_location"
             android:orientation="vertical"
+            android:paddingLeft="5dp"
             android:paddingTop="10dp">
 
             <TextView
                 android:id="@+id/student_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="550"
+                android:textColor="#ffffff"
                 android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
+
                 android:layout_height="wrap_content"
                 android:text="Students"
+                android:textColor="#ffffff"
                 android:textSize="10sp" />
 
         </LinearLayout>
@@ -64,19 +71,23 @@
         <TextView
             android:id="@+id/advanced_placement"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_enrolled_students"
+            android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:text="Advanced placement courses go here."
+            android:textColor="#ffffff"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/extracurricular"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
             android:layout_below="@+id/advanced_placement"
+            android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:text="Extracurricular activities go there."
+            android:textColor="#ffffff"
             android:textSize="20sp" />
 
 
