--- a/app/src/main/res/layout/swipe_view_fragment.xml
+++ b/app/src/main/res/layout/swipe_view_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/cardview_light_background"
+    android:background="#000000"
     android:layout_height="match_parent"
     android:clipChildren="false"
     tools:context="nyc.c4q.ashiquechowdhury.schoolme.HomeFragment">
