--- a/app/src/main/res/layout/fragmentschoolinfo.xml
+++ b/app/src/main/res/layout/fragmentschoolinfo.xml
@@ -36,14 +36,15 @@
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax" />
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:padding="10dp">
 
                     <TextView
+                        android:id="@+id/school_name_header"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Long Island City High School"
@@ -51,7 +52,7 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                </LinearLayout>
+                </RelativeLayout>
             </RelativeLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
