--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,7 +13,7 @@
         <ImageView
             android:id="@+id/school_pic"
             android:layout_width="match_parent"
-            android:layout_height="275dp"
+            android:layout_height="325dp"
             android:layout_alignParentTop="true"
             android:src="@drawable/ic_home_black_24dp" />
 
