--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
+    <color name="Black">#000000</color>
+    <color name="lightGreen">#81C784</color>
+    <color name="darkGreen">#009688</color>
+    <color name="lightBlue">#02a8f3</color>
+
 </resources>
