--- a/app/src/main/res/layout/fragmentschoolinfo.xml
+++ b/app/src/main/res/layout/fragmentschoolinfo.xml
@@ -29,11 +29,12 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/appbar_background"
+                    android:id="@+id/school_pic"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
+                    android:transitionName="imageTrans"
                     app:layout_collapseMode="parallax" />
 
                 <RelativeLayout
