--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="325dp"
             android:layout_alignParentTop="true"
-            android:src="@drawable/ic_home_black_24dp" />
+            android:src="@drawable/ic_home_black_24dp"
+            android:transitionName="imageTrans" />
 
         <TextView
             android:id="@+id/school_name"
@@ -27,6 +27,7 @@
             android:background="@drawable/gradient"
             android:gravity="bottom"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:textColor="#ffffff"
             android:textSize="30sp" />
 
@@ -68,9 +69,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_enrolled_students"
-            android:paddingTop="10dp"
-            android:text="Advanced placement courses go here."
-            android:textSize="20sp" />
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:padding="10dp"
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
 
 
         <TextView
