--- a/app/src/main/res/layout/school_card.xml
+++ b/app/src/main/res/layout/school_card.xml
@@ -27,6 +27,7 @@
             android:background="@drawable/gradient"
             android:gravity="bottom"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:textColor="#ffffff"
             android:textSize="30sp" />
 
@@ -52,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -68,9 +69,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/school_enrolled_students"
-            android:paddingTop="10dp"
-            android:text="Advanced placement courses go here."
-            android:textSize="20sp" />
+            android:padding="10dp"
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
 
 
         <TextView
