--- a/app/src/main/res/layout/schoolinfo_scrollview.xml
+++ b/app/src/main/res/layout/schoolinfo_scrollview.xml
@@ -218,13 +218,33 @@
                     android:textColor="#000"
                     android:textSize="@dimen/section_info" />
 
-                <TextView
-                    android:id="@+id/school_boro"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Astoria"
-                    android:textColor="#000"
-                    android:textSize="@dimen/section_info" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/school_boro"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Astoria"
+                        android:textColor="#000"
+                        android:textSize="@dimen/section_info" />
+                    <!--
+                    <Space
+                        android:layout_width="10dp"
+                        android:layout_height="1dp" />
+
+                    <TextView
+                        android:id="@+id/school_zip"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="10010"
+                        android:textColor="#000"
+                        android:textSize="@dimen/section_info" />
+                        -->
+                </LinearLayout>
+
             </LinearLayout>
 
             <ImageView
