--- a/app/src/main/res/layout/favorite_school_card.xml
+++ b/app/src/main/res/layout/favorite_school_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
+    android:layout_height="237dp"
     android:layout_margin="2dp"
     app:cardCornerRadius="3dp"
     android:elevation="2dp">
@@ -15,11 +15,10 @@
             android:layout_width="match_parent"
             android:layout_height="200dp">
             <ImageView
+                android:background="@color/white"
                 android:id="@+id/school_image"
-                android:background="#fff0"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/ic_person_black_24dp" />
+                android:layout_height="200dp" />
             <Button
                 android:id="@+id/minus_icon"
                 android:layout_margin="5dp"
@@ -30,12 +29,14 @@
             />
         </RelativeLayout>
         <TextView
-            android:background="#81C784"
-            android:text="Stuyvesant High School"
-            android:textColor="#fff"
-            android:textStyle="bold"
+            android:text="Marta Valle High School"
+            android:gravity="center_horizontal"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:background="#E0F2F1"
+            android:textColor="#000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/textView" />
+            android:id="@+id/school_TV" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
