--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,19 +23,22 @@
             app:cardElevation="4dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:orientation="vertical"
                 android:layout_height="match_parent">
-                <TextView
-                    android:layout_marginTop="55dp"
-                    android:textColor="#000"
-                    android:textSize="20sp"
-                    android:gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:text="Daniel Levington"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:orientation="vertical"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_marginTop="55dp"
+                        android:textColor="#000"
+                        android:textSize="20sp"
+                        android:gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:text="Daniel Levington"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                     <TextView
                         android:paddingRight="16dp"
                         android:paddingLeft="16dp"
@@ -43,42 +46,43 @@
                         android:text="Graduating from IS125, Daniel Levigton has had an early talent for the violin and flute. Primarily focusing on music education, he has excelled in his studies and won numerous awards including his own school’s talent show trophy for his excellence with instruments."
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-                <TextView
-                    android:textSize="45sp"
-                    android:gravity="center"
-                    android:text="GRADES"
-                    android:layout_marginTop="20dp"
-                    android:background="#CE93D8"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp" />
+                    <TextView
+                        android:textSize="45sp"
+                        android:gravity="center"
+                        android:text="GRADES"
+                        android:layout_marginTop="20dp"
+                        android:background="#CE93D8"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
 
-                <TextView
-                    android:textSize="40sp"
-                    android:gravity="center"
-                    android:text="EXTRACURRICULAR"
-                    android:layout_marginTop="10dp"
-                    android:background="#81D4FA"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp" />
+                    <TextView
+                        android:textSize="40sp"
+                        android:gravity="center"
+                        android:text="EXTRACURRICULAR"
+                        android:layout_marginTop="10dp"
+                        android:background="#81D4FA"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
 
-                <TextView
-                    android:textSize="45sp"
-                    android:gravity="center"
-                    android:text="ACHIEVMENTS"
-                    android:layout_marginTop="10dp"
-                    android:background="#C5E1A5"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp" />
+                    <TextView
+                        android:textSize="45sp"
+                        android:gravity="center"
+                        android:text="ACHIEVMENTS"
+                        android:layout_marginTop="10dp"
+                        android:background="#C5E1A5"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
 
-                <TextView
-                    android:textSize="45sp"
-                    android:gravity="center"
-                    android:text="REFERENCES"
-                    android:layout_marginTop="10dp"
-                    android:background="#FFCC80"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp" />
-            </LinearLayout>
+                    <TextView
+                        android:textSize="45sp"
+                        android:gravity="center"
+                        android:text="REFERENCES"
+                        android:layout_marginTop="10dp"
+                        android:background="#FFCC80"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp" />
+                </LinearLayout>
+            </ScrollView>
         </android.support.v7.widget.CardView>
     </LinearLayout>
     <de.hdodenhof.circleimageview.CircleImageView
