--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ScrollView
+                android:paddingBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <LinearLayout
